@@ -5,5 +5,3 @@ PAUSED = "paused"
 MANUAL = "manual"
 AUTOMATIC = "automatic"
 
-WEED = 'weed'
-SIXTY_NINE = 'sixty_nine'
